Fix table action alignment standard

--- a/packages/webblocks/src/css/primitives/table.css
+++ b/packages/webblocks/src/css/primitives/table.css
@@ -121,9 +121,8 @@
 .wb-table-actions {
   width: 1%;
   white-space: nowrap;
-  text-align: right;
 }
 
 .wb-table-actions .wb-action-group {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
